--- a/portfolio.html
+++ b/portfolio.html
@@ -330,7 +330,7 @@
     <!-- FOOTER -->
     <footer class="page-footer">
       <div class="container flex">
-        <div class="adress">
+        <div class="address">
           <a class="footer-logo link logo-font" href="./index.html" lang="en"
             ><span class="accent">Web</span>Studio</a
           >
@@ -389,6 +389,23 @@
               ></a>
             </li>
           </ul>
+        </div>
+        <div class="subscription">
+          <p class="label">Подпишитесь на рассылку</p>
+          <form class="subscription-form" name="subscription" autocomplete="on">
+            <input
+              class="subscription-form-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            />
+            <button class="subscription-form-btn button" type="submit">Подписаться
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
