--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         </div>
         <div class="subscription">
           <p class="label">Подпишитесь на рассылку</p>
-          <form class="subscription-form" name="subscription" autocomplete="on">
+          <form class="subscription-form" name="subscription">
             <input
               class="subscription-form-input"
               type="email"
@@ -468,8 +468,9 @@
               placeholder="E-mail"
               required
             />
-            <button class="subscription-form-btn button" type="submit">Подписаться
-              <svg class="icon" width="24" height="24">
+            <button class="subscription-form-btn button" type="submit">
+              Подписаться
+              <svg class="subscription-form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -482,10 +483,91 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="icon" width="18px" height="18px">
+          <svg class="modal-close-btn-icon icon" width="18px" height="18px">
             <use href="./images/icons.svg#close-black"></use>
           </svg>
         </button>
+
+        <form class="application-form" name="application-form">
+          <p class="application-form-head">
+            Оставьте свои данные, мы вам перезвоним
+          </p>
+          <label class="application-form-field"
+            >Имя
+            <span class="application-form-wrapper">
+              <input
+                type="text"
+                class="application-form-input"
+                name="client-name"
+                minlength="2"
+                pattern="[a-zA-Zа-яёА-ЯЁ]+"
+                title="для ввода имени разрешается применять символы кириллицы и латиницы с учетом регистра"
+                required
+              />
+              <svg class="application-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="application-form-field"
+            >Телефон
+            <span class="application-form-wrapper">
+              <input
+                type="tel"
+                class="application-form-input"
+                name="client-tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                title="999-999-9999"
+                required />
+              <svg class="application-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use></svg
+            ></span>
+          </label>
+
+          <label class="application-form-field"
+            >Почта
+            <span class="application-form-wrapper">
+              <input
+                type="email"
+                class="application-form-input"
+                name="client-email" /><svg
+                class="application-form-icon"
+                width="18"
+                height="18"
+              >
+                <use href="./images/icons.svg#icon-email"></use></svg
+            ></span>
+          </label>
+
+          <label class="application-form-comment"
+            >Комментарий
+            <textarea
+              class="application-form-textarea"
+              name="client-comment"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+
+          <div class="application-form-checkbox-wrap">
+            <input
+              type="checkbox"
+              class="application-form-checkbox visually-hidden"
+              name="accept-policy"
+              id="accept-policy-checkbox"
+              value="accepted"
+              required
+            />
+            <label for="accept-policy-checkbox" class="application-form-checkbox-label"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="#" class="accept-policy-link">Условия договора</a>
+            </label>
+          </div>
+
+          <button type="submit" class="application-form-btn button">
+            Отправить
+          </button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
