--- a/portfolio.html
+++ b/portfolio.html
@@ -392,7 +392,7 @@
         </div>
         <div class="subscription">
           <p class="label">Подпишитесь на рассылку</p>
-          <form class="subscription-form" name="subscription" autocomplete="on">
+          <form class="subscription-form" name="subscription">
             <input
               class="subscription-form-input"
               type="email"
@@ -400,8 +400,9 @@
               placeholder="E-mail"
               required
             />
-            <button class="subscription-form-btn button" type="submit">Подписаться
-              <svg class="icon" width="24" height="24">
+            <button class="subscription-form-btn button" type="submit">
+              Подписаться
+              <svg class="subscription-form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
